--- a/Assignment2/Assignment2/Views/Schedules/Details.cshtml
+++ b/Assignment2/Assignment2/Views/Schedules/Details.cshtml
@@ -8,36 +8,16 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Schedule</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.When)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.When)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CoachEmail)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CoachEmail)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Location)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Location)
-        </dd>
-    </dl>
+    <h4>Schedule Members</h4>
+
+    @foreach (var item in Model.ScheduleMembers)
+    {
+
+        @item.MemberEmail
+
+    }
+
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
