--- a/Assignment2/Assignment2/Views/Coaches/Schedule.cshtml
+++ b/Assignment2/Assignment2/Views/Coaches/Schedule.cshtml
@@ -12,5 +12,5 @@
 <p>@Html.DisplayFor(modelItem => items.MemberEmail)</p>
 }
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="MySchedule">Back to List</a>
 </div>
