--- a/Assignment2/Assignment2/Views/Schedules/Create.cshtml
+++ b/Assignment2/Assignment2/Views/Schedules/Create.cshtml
@@ -13,6 +13,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            
             <div class="form-group">
                 <label asp-for="When" class="control-label"></label>
                 <input asp-for="When" class="form-control" />
@@ -25,7 +26,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CoachEmail" class="control-label"></label>
-                <input asp-for="CoachEmail" class="form-control" />
+                @Html.DropDownList("CoachEmail", (IEnumerable<SelectListItem>)ViewBag.Email, "-- Select Coach --")
                 <span asp-validation-for="CoachEmail" class="text-danger"></span>
             </div>
             <div class="form-group">
