--- a/Assignment2/Assignment2/Views/Schedules/Index.cshtml
+++ b/Assignment2/Assignment2/Views/Schedules/Index.cshtml
@@ -8,7 +8,10 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @if (User.IsInRole("Admin"))
+    {
+        <a asp-action="Create">Create New</a>
+    }
 </p>
 <table class="table">
     <thead>
@@ -39,17 +42,23 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.CoachEmail)
+                   @Html.DisplayFor(modelItem => item.CoachEmail)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Location)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Enrol" asp-route-id="@item.Id">Enrol</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    }
+                    @if (User.IsInRole("Member"))
+                    {
+                        <a asp-action="Enrol" asp-route-id="@item.Id">Enrol</a>
+                    }
+                    </td>
             </tr>
         }
     </tbody>
