--- a/Assignment2/Assignment2/Views/Coaches/Schedule.cshtml
+++ b/Assignment2/Assignment2/Views/Coaches/Schedule.cshtml
@@ -12,5 +12,15 @@
 <p>@Html.DisplayFor(modelItem => items.MemberEmail)</p>
 }
 <div>
-    <a asp-action="MySchedule">Back to List</a>
+
+    @if (User.IsInRole("Admin"))
+    {
+        <a asp-action="AllSchedule">Back to List</a>
+    }
+
+    @if (User.IsInRole("Coach"))
+    {
+        <a asp-action="MySchedule">Back to List</a>
+    }
+
 </div>
