--- a/Assignment2/Assignment2/Views/Schedules/Edit.cshtml
+++ b/Assignment2/Assignment2/Views/Schedules/Edit.cshtml
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CoachEmail" class="control-label"></label>
-                <input asp-for="CoachEmail" class="form-control" />
+                @Html.DropDownList("CoachEmail", (IEnumerable<SelectListItem>)ViewBag.Email, "-- Select Coach --")
                 <span asp-validation-for="CoachEmail" class="text-danger"></span>
             </div>
             <div class="form-group">
